--- a/backend/client/package.json
+++ b/backend/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "4.0.5",
+    "use-data-api": "^1.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
