--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.14.0",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "node-cron": "^2.0.3"
   }
 }
